--- a/Grid/index.html
+++ b/Grid/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+    <div></div>
      <div class="grid_container">
         <div class="cell"></div>
         <div class="cell"></div>
