--- a/Grid/index.html
+++ b/Grid/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div></div>
+    <div></div>
      <div class="grid_container">
         <div class="cell"></div>
         <div class="cell"></div>
