--- a/Grid/index.html
+++ b/Grid/index.html
@@ -9,6 +9,7 @@
 <body>
     <div></div>
     <div></div>
+        <div></div>
      <div class="grid_container">
         <div class="cell"></div>
         <div class="cell"></div>
